--- a/config/settings.development.json
+++ b/config/settings.development.json
@@ -5,8 +5,8 @@
   ],
 
   "defaultData": [
-    { "name": "Basket", "quantity": 3, "owner": "john@foo.com", "condition": "excellent" },
-    { "name": "Bicycle", "quantity": 2, "owner": "john@foo.com", "condition": "poor" },
+    { "name": "Basket", "quantity": 3, "owner": "john@foo.com", "category": "book" },
+    { "name": "Bicycle", "quantity": 2, "owner": "john@foo.com", "category": "book" },
     { "name": "Banana", "quantity": 2, "owner": "admin@foo.com", "condition": "good" },
     { "name": "Boogie Board", "quantity": 2, "owner": "admin@foo.com", "condition": "excellent" }
   ]
