--- a/config/settings.development.json
+++ b/config/settings.development.json
@@ -6,6 +6,7 @@
 
   "defaultAccounts": [
     { "email": "admin@foo.com", "password": "changeme", "role": "admin" },
+    { "email": "vantajc@hawaii.edu", "password": "changeme", "role": "admin" },
     { "email": "john@foo.com", "password": "changeme" }
   ],
   "defaultProfiles": [{
