--- a/config/settings.development.json
+++ b/config/settings.development.json
@@ -1,9 +1,9 @@
-{
-  "monti": {
-    "appId": "82g2wHrbgXxrbfj68",
-    "appSecret": "87982a97-5beb-4c94-9820-ea9208bfa905"
-  },
-
+//{
+  //"monti": {
+    //"appId": "82g2wHrbgXxrbfj68",
+    //"appSecret": "87982a97-5beb-4c94-9820-ea9208bfa905"
+  //},
+{ //remove this {
   "defaultAccounts": [
     { "email": "admin@foo.com", "password": "changeme", "role": "admin" },
     { "email": "vantajc@hawaii.edu", "password": "changeme", "role": "admin" },
