--- a/config/settings.development.json
+++ b/config/settings.development.json
@@ -1,9 +1,4 @@
-//{
-  //"monti": {
-    //"appId": "82g2wHrbgXxrbfj68",
-    //"appSecret": "87982a97-5beb-4c94-9820-ea9208bfa905"
-  //},
-{ //remove this {
+{
   "defaultAccounts": [
     { "email": "admin@foo.com", "password": "changeme", "role": "admin" },
     { "email": "vantajc@hawaii.edu", "password": "changeme", "role": "admin" },
@@ -31,5 +26,9 @@
 
   "defaultData": [
     { "name": "Item1", "quantity": 1, "price": 100,"image": "https://m.media-amazon.com/images/I/21gWb-fkviL.__AC_SX300_SY300_QL70_FMwebp_.jpg","condition": "Good", "category": "Books", "description": "Description","owner": "john@foo.com" }
-  ]
+  ],
+  "monti": {
+    "appId": "changeme",
+    "appSecret": "changeme"
+  }
 }
